RAFD-3917: dataprep layout issues
(cherry picked from commit ee488c456f7124d8a36e5581d0cea4c8973aa917)

--- a/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
@@ -84,6 +84,17 @@ $toggle-btn-disabled-bg-color: #cccccc;
 
     .dataprep-main {
       height: 100%;
+      display: flex;
+      overflow-x: auto;
+      > .row {
+        margin: 0;
+        height: 100%;
+      }
+    }
+
+    .dataprep-main-content {
+      height: 100%;
+      width: calc(100% - 550px);
       > .row {
         margin: 0;
         height: 100%;
